@@ -1,11 +1,13 @@
 package org.jenkinsci.plugins.sonargerrit.sonar;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 
-/** @author Réda Housni Alaoui */
+/**
+ * @author Réda Housni Alaoui
+ */
 @Restricted(NoExternalUse.class)
 public class Rule {
 
@@ -38,10 +40,6 @@ public class Rule {
   }
 
   private String escapeHttp(String query) {
-    try {
-      return URLEncoder.encode(query, "UTF-8");
-    } catch (UnsupportedEncodingException e) {
-      return query;
-    }
+    return URLEncoder.encode(query, StandardCharsets.UTF_8);
   }
 }
