@@ -1,9 +1,6 @@
 package org.jenkinsci.plugins.sonargerrit.test_infrastructure.sonarqube;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import okhttp3.Interceptor;
 import okhttp3.OkHttpClient;
@@ -12,7 +9,9 @@ import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/** @author Réda Housni Alaoui */
+/**
+ * @author Réda Housni Alaoui
+ */
 class SonarqubeOkHttpClients {
 
   private static final OkHttpClient OK_HTTP_CLIENT =
@@ -29,8 +28,7 @@ class SonarqubeOkHttpClients {
 
     private static final Logger LOG = LoggerFactory.getLogger(RetryInterceptor.class);
 
-    private static final Set<Integer> RETRYABLE_RESPONSE_CODES =
-        Collections.unmodifiableSet(new HashSet<>(Arrays.asList(401, 404, 503)));
+    private static final Set<Integer> RETRYABLE_RESPONSE_CODES = Set.of(401, 404, 503);
     private static final int MAX_ATTEMPTS = 60;
 
     @NotNull
